Proyecto al dia 17 de octubre de 2023

--- a/bienesRaices/css_main.css
+++ b/bienesRaices/css_main.css
@@ -619,7 +619,7 @@ h4 {
 	border: solid 1px #009900;	
 }
 
-.announce {
+.anuncio {
 	padding: 8px;
 	background: #F6EF9E;
 	border: solid 1px #FFCC00;	
